# agents

./: .gitignore  README.md  enviroment.yml  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/: 04_external_db.py  agent.py  api.py  call_tools.py  llm.py
notebooks/: 01_llm.ipynb  02_call_tools.ipynb  03_tool_Gcalendar.ipynb  04_external_db.ipynb  4.1_node.ipynb
notebooks/LangGraph/Tema4_LangGraph/: 02_control_de_flujo.py  enviroment.yml  proyecto_02.py
notebooks/LangGraph/Tema4_LangGraph/Proyecto_final/: config.py  graph.py  helpdesk.db-shm  helpdesk.db-wal  rag_system.py  setup_rag.py
notebooks/LangGraph/Tema4_LangGraph/Proyecto_final/chroma_db/: chroma.sqlite3
notebooks/LangGraph/Tema4_LangGraph/RAG_Langgraph/: config.py  graph.py  rag.py  rag_system.py
notebooks/langchain/: 01_prompTemplate.ipynb  02_analisis_sentimientos.ipynb  03_prompt_tamplate.ipynb
notebooks/langchain/Tema2/: 02_analisis_sentimientos.ipynb  04_outPut_Parsers.ipynb
notebooks/langchain/Tema2/proyecto1_cv_analizador/services/: cv_evaluator.py  pdf_process.py
notebooks/langchain/Tema3/: 01_DocumentLoaders.ipynb
notebooks/langchain/Tema4_LangGraph/: 01_langgraph.py  proyecto.py
notebooks/langchain/proyecto1_cv_analizador/models/: cv_models.py
notebooks/langchain/proyecto1_cv_analizador/ui/: streamlit_ui.py
notebooks/state_db/: exmple.db  exmple.db-shm  exmple.db-wal
