[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "JeffersonG96",email = "jefersonguaman94@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain-openai (>=0.3.32,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langgraph-cli[inmem] (>=0.4.1,<0.5.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "google-api-python-client (>=2.181.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "langgraph-checkpoint-sqlite (>=2.0.11,<3.0.0)",
    "langchain-google-genai (>=3.0.0,<4.0.0)",
    "langgraph (>=1.0.0,<2.0.0)",
    "langchain (>=1.0.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
