[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "JeffersonG96",email = "jefersonguaman94@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "langchain (>=1.2.3,<2.0.0)",
    "langchain-core (>=1.2.7,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "langgraph (>=1.0.5,<2.0.0)",
    "langgraph-checkpoint-sqlite (>=3.0.1,<4.0.0)",
    "chromadb (>=1.4.0,<2.0.0)",
    "pypdf (>=6.6.0,<7.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "google-api-python-client (>=2.187.0,<3.0.0)",
    "google-auth-httplib2 (>=0.3.0,<0.4.0)",
    "google-auth-oauthlib (>=1.2.3,<2.0.0)",
    "langchain-classic (>=1.0.1,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
